src/ui/snapshots/state/cleanup/cleanup_execution/complete.snap
---
source: src/ui/state/cleanup/cleanup_execution.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                       Cleanup Mode - Deleting Branches                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Progress──────────────────────────────────────────────────────────────────────┐"
"│█████████████████████████████Deleted 3/3 branches ████████████████████████████│"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Status────────────────────────────────────────────────────────────────────────┐"
"│✅ patch/main-6.6.3 - Deleted                                                 │" Hidden by multi-width symbols: [(2, " ")]
"│✅ patch/main-6.6.2 - Deleted                                                 │" Hidden by multi-width symbols: [(2, " ")]
"│❌ patch/next-6.6.1 - Branch is checked out                                   │" Hidden by multi-width symbols: [(2, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│          Cleanup complete. Press Enter to view results, or q to exit         │"
"└──────────────────────────────────────────────────────────────────────────────┘"
