src/ui/snapshots/state/cleanup/cleanup_execution/in_progress.snap
---
source: src/ui/state/cleanup/cleanup_execution.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                       Cleanup Mode - Deleting Branches                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Progress──────────────────────────────────────────────────────────────────────┐"
"│██████████████████████████   Deleted 1/3 branches                             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Status────────────────────────────────────────────────────────────────────────┐"
"│✅ patch/main-6.6.3 - Deleted                                                 │" Hidden by multi-width symbols: [(2, " ")]
"│🔄 patch/main-6.6.2 - Deleting...                                             │" Hidden by multi-width symbols: [(2, " ")]
"│⏳ patch/next-6.6.1 - Pending                                                 │" Hidden by multi-width symbols: [(2, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                       Deleting branches... Please wait                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
